--- a/documents/assignment-04/assignment-04.tex
+++ b/documents/assignment-04/assignment-04.tex
@@ -5,10 +5,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{color}
-\usepackage{lscape}
-\usepackage{booktabs}
-\usepackage{xifthen}
-\usepackage{ragged2e}
+% \usepackage{booktabs}
 
 \title{4. Übungsblatt}
 \author{Lars \and Niklas \and Nikolai \and Pascal}
@@ -118,7 +115,7 @@
         \attr{\assign{Program.node}{\List{ClassDeclaration$_i$}}}
     \item \prod{ClassDeclaration}{\tok{class IDENT \{} ClassMembers* \tok{\}}}
         \footnote{Mit \textit{ClassMembers$_i$.<attr>} sind nur diejenigen $i$ gemeint, für die das Attribut \textit{attr} definiert ist}\\
-        \attr{\assign{ClassDeclaration.name}{\tok{IDENT}.lexval}}
+        \attr{\assign{ClassDeclaration.name}{\new{Name}{\tok{IDENT}.lexval}}}
         \attr{\assign{ClassDeclaration.fields}{\List{ClassMembers$_i$.field}}}
         \attr{\assign{ClassDeclaration.dynamicMethods}{\List{ClassMembers$_i$.dynamicMethod}}}
         \attr{\assign{ClassDeclaration.staticMethods}{\List{ClassMembers$_i$.staticMethod}}}
@@ -144,7 +141,7 @@
     \item \prod{Parameters$_1$}{Parameter \tok{,} Parameters$_2$}\\
         \attr{\assign{Parameters$_1$.params}{\concat{Parameter.param, Parameters$_2$.params}}}
     \item \prod{Parameter}{Type \tok{IDENT}}\\
-        \attr{\assign{Parameter.param}{\new{Parameter}{\tok{IDENT.lexval}, Type.type}}}
+        \attr{\assign{Parameter.param}{\new{Parameter}{\new{Name}{\tok{IDENT.lexval}}, Type.type}}}
     \item \prod{Type}{Type \tok{[ ]}}\\
         \attr{\assign{Type.type}{\new{ArrayType}{Type.type}}}
     \item \prod{Type}{BasicType}\\
@@ -156,7 +153,7 @@
     \item \prod{BasicType}{\tok{void}}\\
         \attr{\assign{BasicType.type}{\new{VoidType}{}}}
     \item \prod{BasicType}{\tok{IDENT}}\\
-        \attr{\assign{BasicType.type}{\new{UserType}{\tok{IDENT}.lexval}}}
+        \attr{\assign{BasicType.type}{\new{UserType}{\new{Name}{\tok{IDENT}.lexval}}}}
 
     \item \prod{Statement}{Block}\\
         \attr{\assign{Statement.node}{\new{BlockStatement}{Block.nodes}}}
@@ -177,7 +174,7 @@
     \item \prod{BlockStatement}{LocalVariableDeclaration}\\
         \attr{\assign{BlockStatement.node}{LocalVariableDeclaration.node}}
     \item \prod{LocalVariableDeclaration}{Type \tok{IDENT} (\tok{=} Expression)? \tok{;}}\\
-        \attr{\assign{LocalVariableDeclaration.node}{\new{DeclarationStatement}{\tok{IDENT}.lexval, Type.type, Expression.expr}}}
+        \attr{\assign{LocalVariableDeclaration.node}{\new{DeclarationStatement}{\\\new{Name}{\tok{IDENT}.lexval}, Type.type, Expression.expr}}}
     \item \prod{EmptyStatement}{\tok{;}}\\
         \attr{\assign{EmptyStatement.node}{$\bot$}}
     \item \prod{WhileStatement}{\tok{while (} Expression \tok{)} Statement}\\
@@ -229,9 +226,9 @@
         \attr{\assign{ArrayAccess.in}{PostifOp.in}}
         \attr{\assign{PostifOp.expr}{ArrayAccess.expr}}
     \item \prod{MethodInvocation}{\tok{.} \tok{IDENT (} Arguments \tok{)}}\\
-        \attr{\assign{MethodInvocation.expr}{\new{MethodInvocationExpression}{MethodInvocation.in, \tok{IDENT}.lexval, Arguments.exprs}}}
+        \attr{\assign{MethodInvocation.expr}{\new{MethodInvocationExpression}{\\MethodInvocation.in, \new{Name}{\tok{IDENT}.lexval}, Arguments.exprs}}}
     \item \prod{FieldAccess}{\tok{.} \tok{IDENT}}\\
-        \attr{\assign{FieldAccess.expr}{\new{FieldAccessExpression}{FieldAccess.in, \tok{IDENT}.lexval}}}
+        \attr{\assign{FieldAccess.expr}{\new{FieldAccessExpression}{FieldAccess.in, \new{Name}{\tok{IDENT}.lexval}}}}
     \item \prod{ArrayAccess}{\tok{[} Expression \tok{]}}\\
         \attr{\assign{Array}{\new{ArrayAccessExpression}{ArrayAccess.in, Expression.expr}}}
     \item \prod{Arguments}{(Expression$^1$ (\tok{,} Expression$^2$)*)?}\\
@@ -247,7 +244,7 @@
     \item \prod{PrimaryExpression}{\tok{IDENT}}\\
         \attr{\assign{PrimaryExpression.expr}{\new{Name}{\tok{IDENT}.lexval}}}
     \item \prod{PrimaryExpression}{\tok{IDENT \tok{(} Arguments \tok{)}}}\\
-        \attr{\assign{PrimaryExpression.expr}{\new{MethodInvocationExpression}{$\bot$, \new{Name}{\tok{IDENT}.lexval}}}}
+        \attr{\assign{PrimaryExpression.expr}{\new{MethodInvocationExpression}{$\bot$,\\\new{Name}{\tok{IDENT}.lexval}}}}
     \item \prod{PrimaryExpression}{\tok{this}}\\
         \attr{\assign{PrimaryExpression}{\new{This}{}}}
     \item \prod{PrimaryExpression}{\tok{(} Expression \tok{)}}\\
@@ -257,7 +254,7 @@
     \item \prod{PrimaryExpression}{NewArrayExpression}\\
         \attr{\assign{PrimaryExpression.expr}{NewArrayExpression.expr}}
     \item \prod{NewObjectExpression}{\tok{new IDENT ( )}}\\
-        \attr{\assign{NewObjectExpression.expr}{\new{NewObjectExpression}{\tok{IDENT}.lexval}}}
+        \attr{\assign{NewObjectExpression.expr}{\new{NewObjectExpression}{\\\new{Name}{\tok{IDENT}.lexval}}}}
     \item \prod{NewArrayExpression}{\tok{new} BasicType \tok{[} Expression \tok{]} (\tok{[]})*}\\
         \attr{\assign{NewArrayExpression.expr}{\new{NewArrayExpression}{Type.type, Expression.expr, \new{ArrayDimensions}{(\tok{[]})*}}}}
 \end{enumerate}
